--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,15 +20,32 @@
     <div class="col-sm-6">            
       <h3>Ladda upp din fil</h3>
       <p>Här laddar du upp din csv-fil (med kommatecken) på alla deltagare. Filen måste var på formatet enligt:</p>
-      <p> <i>Names, Address, Foodpreferences</i> och tänk på att antal deltagande par måste vara jämt delbart med 3. </p>
+      <table style: border="1px solid" width="100%"> 
+      <tr>
+      <th>Names</th>
+      <th>Address</th>
+      <th>Foodpreferences</th>
+      </tr>
+      </table>
+      <br>
+      <p> Observera även att antal deltagande par måste vara jämt delbart med 3. </p>
       <p> När du klickar på Submit kommer du få tre filer nerladdare i en resultat-mapp till din dator </p>
       
-      <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="Result">
+  <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="Result">
     <input type="file" name="file" >
     <input type="submit" value="Submit" />
-</form>
-      
+  </form>
+
+  <p>
+  <br>
+  Här kan du <a href="/examples/ExampleInput.csv"> ladda ner en exemplefil</a>. 
+  </p>
+
+
+
     </div>
+
+
     <div class="col-sm-6">
       <h3>Om MiddagsMixern</h3>
       <p>MiddagsMixern är till för dig som vill ha en cykelfest eller en grannfest. Genom att ladda upp en fil med alla deltagarna här får du tillbaka ett schema för kvällen.</p>
@@ -36,6 +53,7 @@
       <h4>Hur funkar det?</h4>
       <p>Konceptet går kort o gott ut på att man äter förrätt, huvudrätt och efterrätt på olika ställen med olika personer. Och under kvällen står du för en av rätterna. På detta sätt får du sitta ner och lära känna några lite bättre under en rätt för att sedan ta dig vidare och hänga med ett nytt sällskap. Alla i sällskapet får avnjuta en spännande 3-rätters middag men behöver själv bara laga en rätt till ett sällskap på 6 personer. </p>
     </div>
+
   </div>
 </div>
 
